# python-setup

./: pyproject.toml
config/: app.py
src/: app.py
